# SHEET_RGBD-T_system

./: CITATION.cff  LICENSE.txt  README.md  citation.cff
ROS_SYSTEM/ROS_CAMERA_RECORDER/: CMakeLists.txt  package.xml
ROS_SYSTEM/ROS_CAMERA_RECORDER/launch/: thermal_camera.launch
ROS_SYSTEM/ROS_CAMERA_RECORDER/src/: thermal_camera_reader_node.cpp
ROS_SYSTEM/ROS_IMAGE_EXTRACTOR_NODE/label_generator/: label_generator_node.py
ROS_SYSTEM/ROS_IMAGE_EXTRACTOR_NODE/launch/: save_image.launch.py
SHEET_RGBD-T_system_v_2022/: README.md
SHEET_RGBD-T_system_v_2022/ROS_SYSTEM/ROS_CAMERA_RECORDER/include/thermal_camera_reader/: thermal_camera_reader.hpp
SHEET_RGBD-T_system_v_2022/ROS_SYSTEM/ROS_CAMERA_RECORDER/launch/: d400_camera.launch
SHEET_RGBD-T_system_v_2022/ROS_SYSTEM/ROS_CAMERA_RECORDER/src/: thermal_camera_reader.cpp
SHEET_RGBD-T_system_v_2022/ROS_SYSTEM/ROS_IMAGE_EXTRACTOR_NODE/: package.xml  setup.cfg  setup.py
SHEET_RGBD-T_system_v_2022/SHEET_RGBDT_system/: INPUTS.py  Thermal_correction.py  XYZ_functions.py  XYZ_positioning_main.py  reordering_output_CSV_for_DELIVERABLE.py
SHEET_RGBD-T_system_v_2022/SHEET_RGBDT_system/colore/: alignemnt_coords_SHEET_deliverable.txt
SHEET_RGBDT_system/: ALIGNMENT.py  Get_aligment_factors.py  RUN_file.py  SHEET_Temp_Position_extractor_from_Yolo.py  Thermal_sheet.py  Visualise_orchard.py
SHEET_RGBDT_system/colore/: alignemnt_scaleFactors_SHEET_deliverable.txt
conda env/: environment.yml
